--- a/package.json
+++ b/package.json
@@ -1,33 +1,9 @@
 {
-  "name": "hiphop-translator",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "axios": "^1.8.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-youtube": "^10.1.0",
-    "xml2js": "^0.6.2"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^3.3.2",
-    "vite": "^6.2.0"
+    "name": "hiphop-translator-monorepo",
+    "private": true,
+    "scripts": {
+      "build": "cd frontend && npm install && npm run build && cd backend && npm install",
+      "start": "cd backend && node index.cjs"
+    }
   }
-}
+  
