--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "hiphop-translator-monorepo",
     "private": true,
     "scripts": {
-      "build": "cd frontend && npm install && npm run build && cd backend && npm install",
+      "build": "cd frontend && npm install && npm run build && cd .. && cd backend && npm install",
       "start": "cd backend && node index.cjs"
     }
   }
